Remove wrong reference in packages.config

--- a/DropzoneJs/DropzoneJs.csproj
+++ b/DropzoneJs/DropzoneJs.csproj
@@ -208,6 +208,8 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Properties\PublishProfiles\GraphDetective - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\graphdetectivepoc - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\GraphicsDetective - Non TA.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\dropzone.js" />
     <Content Include="Scripts\dropzone.min.js" />
@@ -222,7 +224,9 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
