--- a/DropzoneJs/Views/Web.config
+++ b/DropzoneJs/Views/Web.config
@@ -7,7 +7,6 @@
       <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
     </sectionGroup>
   </configSections>
-
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
@@ -17,12 +16,12 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="DropzoneJs" />
+        <add namespace="GraphicsDetective" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
 
-  <appSettings>
+  <appSettings file="~/AppSecrets.config">
     <add key="webpages:Enabled" value="false" />
   </appSettings>
 
