Make difference between thumb and normal image. Add loggin to webjobs

--- a/DropzoneJs/GraphicsDetective.csproj
+++ b/DropzoneJs/GraphicsDetective.csproj
@@ -187,6 +187,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\ImageFromBlob.cs" />
     <Compile Include="Models\ImagesResultModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
